# SBoy28

./: .gitignore  CMakeLists.txt  README.md
apps/OS/: OS.c  gui.c
apps/OS/API/Grapich/: gui.c  windows.cpp
apps/lua/: CMakeLists.txt  README.md  lapi.c  lauxlib.c  lauxlib.h  lua.c  luaconf.h  lvm.h  lzio.c  lzio.h
apps/lua/examples/: hello.lua
apps/lua/include/: lua_app.h  lua_runtime.h  lua_syscalls.h
apps/lua/src/bindings/: lua_fs.c  lua_process.c  lua_syscalls.c  lua_window.c
apps/lua/src/core/: lua_app.c  lua_vm.c
apps/lua/src/runtime/: lua_loader.c  lua_runtime.c
apps/lua/src/utils/: lua_utils.c
apps/nestopia/: ChangeLog
apps/nestopia/libretro/msvc/: msvc-2003-xbox1.sln
apps/nestopia/libretro/msvc/msvc-2003-xbox1/: msvc-2003-xbox1.vcproj
apps/nestopia/source/core/: NstApu.cpp  NstApu.hpp  NstCartridge.cpp  NstCartridgeInes.cpp  NstCartridgeRomset.cpp  NstCartridgeUnif.cpp  NstCore.cpp  NstCore.hpp  NstCpu.cpp  NstCpu.hpp  NstFds.cpp  NstFile.cpp  NstImageDatabase.cpp  NstLog.cpp  NstLog.hpp  NstMachine.cpp  NstMachine.hpp  NstMemory.hpp  NstNsf.cpp  NstPins.cpp  NstPpu.cpp  NstPpu.hpp  NstSha1.hpp  NstSoundPcm.hpp  NstState.cpp  NstState.hpp  NstStream.cpp  NstStream.hpp  NstTrackerRewinder.cpp  NstVideoFilterNtsc.cpp  NstVideoFilterxBR.cpp  NstVideoFilterxBR.hpp  NstVideoRenderer.cpp  NstVideoRenderer.hpp  NstXml.cpp  NstZlib.cpp
apps/nestopia/source/core/api/: NstApiCartridge.cpp  NstApiCartridge.hpp  NstApiCheats.cpp  NstApiMachine.cpp  NstApiMachine.hpp  NstApiSound.cpp  NstApiSound.hpp  NstApiUser.cpp  NstApiUser.hpp  NstApiVideo.cpp  NstApiVideo.hpp
apps/nestopia/source/core/board/: NstBoard.cpp  NstBoard.hpp  NstBoardAcclaim.hpp  NstBoardAcclaimMcAcc.cpp  NstBoardAcclaimMcAcc.hpp  NstBoardAveD1012.cpp  NstBoardBandai24c0x.cpp  NstBoardBandaiKaraokeStudio.cpp  NstBoardBmc20in1.cpp  NstBoardBmcFk23c.cpp  NstBoardBmcPowerjoy84in1.cpp  NstBoardBmcVt5201.cpp  NstBoardFfe.cpp  NstBoardJyCompany.cpp  NstBoardKonamiVrc2.cpp  NstBoardKonamiVrc7.cpp  NstBoardMmc1.cpp  NstBoardMmc3.hpp  NstBoardMmc5.cpp  NstBoardNamcot.hpp  NstBoardNamcot163.cpp  NstBoardNamcot163.hpp  NstBoardNamcot175.cpp  NstBoardNamcot175.hpp  NstBoardSachenS8259.cpp  NstBoardSachenStreetHeroes.cpp  NstBoardSachenTca01.cpp  NstBoardSunsoft5b.cpp  NstBoardSunsoftDcs.cpp  NstBoardSunsoftFme7.cpp  NstBoardTengenRambo1.cpp  NstBoardWaixingSh2.cpp
apps/nestopia/source/core/input/: NstInpFamilyKeyboard.cpp  NstInpPad.cpp  NstInpPad.hpp
apps/nestopia/source/core/vssystem/: NstVsSystem.cpp
apps/nestopia/source/unix/: ini.cpp  ini.h
docs/: BUILD_WINDOWS.md  nestopia_porting_guide.md  roadmap_emulator_support.md
include/: stdio.h
include/OS/: OS.h
include/OS/Grapich/: gui.h  windows.h
include/common/: ports.h  utils.h
include/drivers/: filesystem.h  keyboard.h  mouse.h  pit.h  rtc.h  thread.h  tty.h  vga.h
include/kernel/: cpu.h  gdt.h  idt.h  kernel.h  kheap.h  multiboot.h  power.h  spinlock.h  types.h
include/ui/: colors.h  font_data.h  ui.h
src/boot/: boot.s  bootsector.ld  bootsector.s
src/common/: utils.c
src/drivers/: filesystem.c  keyboard.c  rtc.c  tty.c  vga.c
src/drivers/elf/: Makefile  elf_class.asm  test  test.c
src/drivers/iso/: Makefile  iso.c  iso.h
src/drivers/mouse/: Makefile
src/drivers/mouse/asm/: irq_mouse.S
src/drivers/mouse/src/: mouse.c
src/drivers/thread/: Makefile
src/drivers/thread/asm/: context_switch.S
src/drivers/thread/src/: pit.c  scheduler.c
src/kernel/core/: gdt.c  gdt_s.s  idt.c  interrupts.s  kheap.c  kmain.c  linker.ld  multiboot.c  power.c
src/libc/: stdio.c
src/ui/: ui.c
tools/: pad_img.py
